--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "clsx": "2.1.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.14.0",
     "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
     "react": "19.2.3",
